@@ -1,3 +1,16 @@
-# Cursos
+# Repositorio de referencias
 
-Repositorio de cursos ...
+
+# Eclipse IDE
+
+Resolve `Error: JavaFX runtime components are missing, and are required to run this application` para eclipse/JavaFX.
+
+```bach
+--module-path "C:\path\to\javafx-sdk-21.0.2\lib" --add-modules javafx.controls,javafx.fxml
+```
+
+# Autor
+
+Thiago Messias de Brito
+
+Email: [thiagobritto.developer@gmail.com](mailto:thiagobritto.developer@gmail.com)
